# austin311bot-unofficial

./: .env.example  .gitignore  311_categories.db  CLAUDE.md  CONTEXT.md  README.md  austin311_bot.py  fly.toml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy-map.yml  generate-animal-map.yml  generate-bicycle-map.yml  generate-childcare-map.yml  generate-crime-map.yml  generate-graffiti-map.yml  generate-noise-map.yml  generate-parking-map.yml  generate-parks-map.yml  generate-traffic-map.yml  generate-water-map.yml
animalsvc/: __init__.py  animal_bot.py
bicycle/: bicycle_bot.py
bike_lane_karen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
childcare/: childcare_bot.py
crime/: crime_map.py
dashboards/: dashboard_311.py
docs/: index.html
docs/animal/: index.html
docs/bicycle/: index.html
docs/childcare/: index.html
docs/court/: index.html
docs/crime/: index.html
graffiti/: __init__.py  analyze_graffiti_patterns.py  config.py  graffiti_bot.py  hotspot_explanation.py  remediation_analysis.py  telegram_bot.py
graffitibot/: CHANGES.md  CODE_REVIEW.md  DEPLOYMENT.md  QUICKSTART.md  config.py  graffiti_bot.py  ingest_graffiti_data.py  remediation_analysis.py  telegram_bot.py
homeless/: homeless_bot.py
infrastructureandtransportation/: traffic_bot.py
noisecomplaints/: noise_bot.py
parking/: parking_bot.py
parks/: parks_bot.py
restaurants/: restaurant_bot.py
scripts/: generate_map.py
tools/: graffiti_bot_cli.py
waterconservation/: water_conservation_bot.py
(+8 files in other folders)
